--- a/resume/style.css
+++ b/resume/style.css
@@ -105,3 +105,40 @@ ul {
   margin-bottom: 30px;
 
 }
+
+.jumbotron{
+  background-repeat: no-repeat;
+  opacity: .90;
+}
+
+.display-4 {
+  color: white;
+  font-family: "gill sans", avenir, arial, sans-serif;
+  font-size: 4em !important;
+  text-align: center;
+}
+
+.lead {
+  color: white;
+  font-family: "gill sans", avenir, arial, sans-serif;
+  font-size: 1.5em !important;
+  text-align: center;
+}
+
+button a {
+  color: white;
+  text-decoration: none;
+}
+
+button a:hover {
+  color: white;
+  text-decoration: underline;
+}
+button {
+  font-family: "gill sans", avenir, arial, sans-serif;
+  font-weight: normal;
+  font-size: 1em;
+  color: white;
+  text-decoration: none;
+
+}
