--- a/resume/style.css
+++ b/resume/style.css
@@ -2,7 +2,7 @@
 
 /* general text */
 body {
-  font-family: 'Open Sans', ariel, sans-serif;
+  font-family: Georgia,times, serif;
   font-size: 1em;
   color: #444;
   font-weight: 400;
@@ -46,7 +46,7 @@ ul.menu li {
 
 /* sections with colors */
 
-#sectionheader {
+.sectionheader {
   font-size: 1.5em;
   color: #fff;
   background-color: #33485e;
@@ -106,6 +106,18 @@ ul {
 
 }
 
+.linebreak{
+  display: block;
+   margin-top: 0.5em;
+   margin-bottom: 0.5em;
+   margin-left: auto;
+   margin-right: auto;
+   overflow: hidden;
+   border-style: inset;
+   border-width: 1px;
+}
+
+/* jumbotron */
 .jumbotron{
   background-repeat: no-repeat;
   opacity: .90;
@@ -130,15 +142,34 @@ button a {
   text-decoration: none;
 }
 
-button a:hover {
-  color: white;
+a:hover {
+  color: #9a58b9;
   text-decoration: underline;
 }
 button {
-  font-family: "gill sans", avenir, arial, sans-serif;
+  font-family: "gill sans", avenir, arial, sans-serif !important;
   font-weight: normal;
   font-size: 1em;
   color: white;
   text-decoration: none;
 
+}
+
+/* content column*/
+p {
+  font-family: georgia, times, serif;
+  font-size: 1em;
+
+}
+
+.col-md-12 {
+  text-align: center;
+}
+
+
+/*navbar*/
+.sticky {
+  position: fixed;
+  top: 0px;
+  width: 100%;
 }
