--- a/midterm/style.css
+++ b/midterm/style.css
@@ -30,7 +30,8 @@ h4 {
   font-size: 14px;
 }
 
-.images {
+/* picture adjustments*/
+.imagecenter {
     max-width: 1200px;
     min-width: 250px;
     max-height: 400px;
@@ -39,13 +40,29 @@ h4 {
     width: 65%;
     margin-left: auto;
     margin-right: auto;
+
 }
 
 .caption {
   text-align: center;
-  display: block;
-  width: 50%;
+  width: 40%;
   margin-left: auto;
   margin-right: auto;
   font-size: 10px;
+
+}
+
+
+blockquote {
+  font-size: 18px;
+  font-family: Georgia, serif;
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: 30px;
+  width: 30%;
+  color: #be7c47;
+  background-color: #ebded4;
+  padding: 25px;
+  float: left;
 }
